--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>College Fest 2024</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>AVIRBHAV 2024</title>
+    <link rel="stylesheet" href="Styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <img src="images/college-logo.png" alt="College Logo">
+                <img src="aiml_logo.png" alt="College Logo">
             </div>
             <nav class="navbar">
                 <ul class="nav-links">
@@ -31,12 +31,12 @@
     </header>
 
     <div class="scrolling-banner">
-        <p>Dept Fest Dates: September 12-13, 2024</p>
+        <p>Avirbhav-2k24 Dates: September 12-13, 2024</p>
     </div>
 
     <section id="home" class="hero-section" data-aos="fade-in">
         <div class="hero-content">
-            <h1>Welcome to College Fest 2024</h1>
+            <h1>Welcome to Avirbhav-2024</h1>
             <p>Join us for a week of excitement, learning, and fun!</p>
             <div class="hero-buttons">
                 <a href="#registration" class="btn">Register Now</a>
