--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#events">Events</a></li>
+                    <li><a href="events.html">Events</a></li>
                     <li><a href="#schedule">Schedule</a></li>
                     <li><a href="#registration">Registration</a></li>
                     <li><a href="#gallery">Gallery</a></li>
@@ -36,11 +36,11 @@
 
     <section id="home" class="hero-section" data-aos="fade-in">
         <div class="hero-content">
-            <h1>Welcome to Avirbhav-2024</h1>
+            <h1>Welcome to Avirbhav 2024</h1>
             <p>Join us for a week of excitement, learning, and fun!</p>
             <div class="hero-buttons">
                 <a href="#registration" class="btn">Register Now</a>
-                <a href="#events" class="btn">Explore Events</a>
+                <a href="events.html" class="btn">Explore Events</a>
             </div>
         </div>
     </section>
