--- a/index.html
+++ b/index.html
@@ -67,13 +67,7 @@
         </div>
     </section>
 
-    <section id="schedule" class="schedule-section" data-aos="fade-up">
-        <div class="container">
-            <h2>Fest Schedule</h2>
-            <p>Stay tuned for the detailed schedule of the events.</p>
-        </div>
-    </section>
-
+  
     <section id="registration" class="registration-section" data-aos="fade-up">
         <div class="container">
             <h2>Register for Events</h2>
@@ -84,32 +78,23 @@
         </div>
     </section>
 
-    <section id="gallery" class="gallery-section" data-aos="fade-up">
-        <div class="container">
-            <h2>Gallery</h2>
-            <div class="gallery-grid">
-                <img src="images/gallery1.jpg" alt="Gallery 1">
-                <img src="images/gallery2.jpg" alt="Gallery 2">
-                <img src="images/gallery3.jpg" alt="Gallery 3">
-            </div>
-        </div>
-    </section>
+    
 
     <section id="team" class="team-section" data-aos="fade-up">
         <div class="container">
             <h2>Conveners</h2>
             <div class="team-grid">
                 <div class="team-member">
-                    <img src="images/convenor.jpg" alt="Convenor">
-                    <h3>Convenor Name</h3>
+                    <img src="convenor.jpg" alt="Convenor">
+                    <h3>DR.B.RAMA KRISHNA</h3>
                     <p>Convenor</p>
-                    <p><i class="fas fa-phone"></i> +91 12345 67890</p>
+                    <p><i class="fas fa-phone"></i> +91 7989662002</p>
                 </div>
                 <div class="team-member">
                     <img src="images/co-convenor.jpg" alt="Co-Convenor">
-                    <h3>Co-Convenor Name</h3>
+                    <h3>SUDHAKAR</h3>
                     <p>Co-Convenor</p>
-                    <p><i class="fas fa-phone"></i> +91 23456 78901</p>
+                    <p><i class="fas fa-phone"></i> +91 9705412233</p>
                 </div>
             </div>
         </div>
