--- a/events.html
+++ b/events.html
@@ -4,13 +4,167 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Events - Avirbhav 2024</title>
-    <link rel="stylesheet" href="Styles.css">
+    <title>AVIRBHAV 2024 Events</title>
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- AOS (Animate on Scroll) CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+    <!-- Custom CSS -->
+    <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            background-color: #000; /* Set background to black */
+            color: #fff; /* Default text color to white */
+        }
+
+        /* Header */
+        .header {
+            background-color: #111;
+            padding: 20px 0;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+
+        .container {
+            width: 85%;
+            margin: 0 auto;
+        }
+
+        .logo img {
+            max-height: 50px;
+        }
+
+        .navbar ul {
+            list-style-type: none;
+            display: flex;
+            gap: 20px;
+            margin: 0;
+            padding: 0;
+        }
+
+        .navbar ul li a {
+            text-decoration: none;
+            font-weight: 600;
+            color: #fff;
+            transition: color 0.3s ease;
+        }
+
+        .navbar ul li a:hover {
+            color: #7D3C98;
+        }
+
+        /* Events Section */
+        .events-section {
+            padding: 50px 0;
+            background-color: #000;
+        }
+
+        .section-title {
+            text-align: center;
+            font-size: 2.5em;
+            margin-bottom: 40px;
+            color: #fff;
+            font-weight: 700;
+            text-shadow: 0 0 10px #7D3C98; /* Glowing effect on the section title */
+        }
+
+        .event-category {
+            margin-bottom: 50px;
+        }
+
+        .event-category-title {
+            font-size: 2em;
+            margin-bottom: 20px;
+            color: #fff;
+            font-weight: 600;
+            text-align: center;
+            text-shadow: 0 0 10px #7D3C98;
+        }
+
+        .events-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+        }
+
+        .event-item {
+            background: #222;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .event-item:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 0 25px rgba(255, 255, 255, 0.3);
+        }
+
+        .event-header h3 {
+            font-size: 1.5em;
+            margin-bottom: 10px;
+            color: #fff;
+            transition: color 0.3s ease;
+            text-shadow: 0 0 5px #7D3C98;
+        }
+
+        .event-header h3:hover {
+            color: #7D3C98;
+            text-shadow: 0 0 20px #7D3C98, 0 0 30px #7D3C98; /* Glowing effect on hover */
+        }
+
+        .event-content p {
+            font-size: 1em;
+            color: #aaa;
+        }
+
+        .event-content p:hover {
+            color: #7D3C98; /* Glowing effect for paragraph text */
+            text-shadow: 0 0 10px #7D3C98, 0 0 15px #7D3C98; /* Glowing effect on hover */
+        }
+
+        /* Footer */
+        .footer {
+            background-color: #111;
+            padding: 20px 0;
+            color: #fff;
+            text-align: center;
+        }
+
+        .footer .social-media {
+            list-style: none;
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            padding: 0;
+        }
+
+        .footer .social-media li a {
+            color: #fff;
+            font-size: 1.5em;
+            text-decoration: none;
+        }
+
+        .footer p {
+            margin-top: 10px;
+            font-size: 0.9em;
+        }
+
+        .footer .social-media li a:hover {
+            color: #7D3C98;
+            text-shadow: 0 0 15px #7D3C98;
+        }
+    </style>
 </head>
 <body>
+    <!-- Header Section -->
     <header class="header">
         <div class="container">
             <div class="logo">
@@ -18,45 +172,135 @@
             </div>
             <nav class="navbar">
                 <ul class="nav-links">
-                    <li><a href="index.html#home">Home</a></li>
-                    <li><a href="index.html#about">About</a></li>
-                    <li><a href="events.html">Events</a></li>
-                    <li><a href="index.html#schedule">Schedule</a></li>
-                    <li><a href="index.html#registration">Registration</a></li>
-                    <li><a href="index.html#gallery">Gallery</a></li>
-                    <li><a href="index.html#contact">Contact Us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#events">Events</a></li>
+                    <li><a href="#schedule">Schedule</a></li>
+                    <li><a href="#registration">Registration</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#contact">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <section id="events" class="events-section" data-aos="fade-up">
+    <!-- Events Section -->
+    <section id="events" class="events-section">
         <div class="container">
-            <h2>Our Events</h2>
-            <div class="slider-container">
-                <div class="slider">
-                    <div class="slide"><img src="images/event1.jpg" alt="Event 1"></div>
-                    <div class="slide"><img src="images/event2.jpg" alt="Event 2"></div>
-                    <div class="slide"><img src="images/event3.jpg" alt="Event 3"></div>
+            <h2 class="section-title">AVIRBHAV 2024 Events</h2>
+
+            <!-- Technical Events -->
+            <div class="event-category">
+                <h3 class="event-category-title">Technical Events</h3>
+                <div class="events-list">
+                    <div class="event-item" data-aos="fade-up">
+                        <div class="event-header">
+                            <h3>Techiplore (PPT)</h3>
+                        </div>
+                        <div class="event-content">
+                            <p>Showcase your technical knowledge and presentation skills. Present groundbreaking ideas and innovations!</p>
+                        </div>
+                    </div>
+                    <div class="event-item" data-aos="fade-up">
+                        <div class="event-header">
+                            <h3>Coding Challenge</h3>
+                        </div>
+                        <div class="event-content">
+                            <p>Participate in an intense coding competition. Solve real-world problems and stand out as a top coder.</p>
+                        </div>
+                    </div>
                 </div>
-                <button class="prev" onclick="plusSlides(-1)">&#10094;</button>
-                <button class="next" onclick="plusSlides(1)">&#10095;</button>
+            </div>
+
+            <!-- Non-Technical Events -->
+            <div class="event-category">
+                <h3 class="event-category-title">Non-Technical Events</h3>
+                <div class="events-list">
+                    <div class="event-item" data-aos="fade-up">
+                        <div class="event-header">
+                            <h3>Debate Competition</h3>
+                        </div>
+                        <div class="event-content">
+                            <p>Engage in intellectual discussions and debates. Share your opinions on contemporary topics.</p>
+                        </div>
+                    </div>
+                    <div class="event-item" data-aos="fade-up">
+                        <div class="event-header">
+                            <h3>Quiz Competition</h3>
+                        </div>
+                        <div class="event-content">
+                            <p>Test your general knowledge and trivia in this exciting quiz competition.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Crazy Games -->
+            <div class="event-category">
+                <h3 class="event-category-title">Crazy Games</h3>
+                <div class="events-list">
+                    <div class="event-item" data-aos="fade-up">
+                        <div class="event-header">
+                            <h3>Balloon Game</h3>
+                        </div>
+                        <div class="event-content">
+                            <p>Join the fun in the balloon game and compete with others to finish rounds in the shortest time!</p>
+                        </div>
+                    </div>
+                    <div class="event-item" data-aos="fade-up">
+                        <div class="event-header">
+                            <h3>Tug of War</h3>
+                        </div>
+                        <div class="event-content">
+                            <p>Compete in this exciting test of strength and teamwork! Victory awaits the strongest team.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Online Games -->
+            <div class="event-category">
+                <h3 class="event-category-title">Online Games</h3>
+                <div class="events-list">
+                    <div class="event-item" data-aos="fade-up">
+                        <div class="event-header">
+                            <h3>PUBG Tournament</h3>
+                        </div>
+                        <div class="event-content">
+                            <p>Compete in the ultimate battle royale challenge and emerge as the PUBG champion!</p>
+                        </div>
+                    </div>
+                    <div class="event-item" data-aos="fade-up">
+                        <div class="event-header">
+                            <h3>FIFA Tournament</h3>
+                        </div>
+                        <div class="event-content">
+                            <p>Show off your football skills in this exciting online FIFA tournament.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
+    <!-- Footer Section -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 College Fest | All Rights Reserved</p>
             <ul class="social-media">
-                <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
             </ul>
+            <p>&copy; 2024 AVIRBHAV Event | All rights reserved.</p>
         </div>
     </footer>
 
+    <!-- AOS (Animate on Scroll) JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="script.js"></script>
+    <script>
+        AOS.init({
+            duration: 1000
+        });
+    </script>
 </body>
 </html>
