--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 College Fest | All Rights Reserved</p>
+            <p>&copy; 2024 AIML Fest | All Rights Reserved</p>
             <ul class="social-media">
                 <li><a href="#"><i class="fab fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
