--- a/events.html
+++ b/events.html
@@ -25,26 +25,36 @@
         /* Header */
         .header {
             background-color: #111;
-            padding: 20px 0;
+            padding: 10px 0;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
             position: sticky;
             top: 0;
             z-index: 1000;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            flex-direction: column; /* Set column direction to stack logo and nav links */
         }
 
         .container {
             width: 85%;
             margin: 0 auto;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            flex-direction: column;
         }
 
-        .logo img {
-            max-height: 50px;
+        .navbar {
+            display: flex;
+            gap: 10px;
+            order: 2;
+            margin-top: 10px; /* Add space between logo and navigation */
         }
 
-        .navbar ul {
+        .nav-links {
             list-style-type: none;
             display: flex;
-            justify-content: center;
             gap: 20px;
             margin: 0;
             padding: 0;
@@ -59,6 +69,16 @@
 
         .navbar ul li a:hover {
             color: #7D3C98;
+        }
+
+        .logo {
+            display: flex;
+            justify-content: center;
+            order: 1;
+        }
+
+        .logo img {
+            max-height: 50px;
         }
 
         /* Events Section */
@@ -91,7 +111,7 @@
 
         .events-list {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(2, 1fr); /* Display two events per row */
             gap: 20px;
         }
 
@@ -188,6 +208,15 @@
             color: #7D3C98;
             text-shadow: 0 0 15px #7D3C98;
         }
+
+        /* Responsive Styling for Mobile View */
+        @media (max-width: 768px) {
+            .events-list {
+                display: flex;
+                flex-direction: column; /* Stacks each event item vertically */
+                gap: 15px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -201,7 +230,6 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#events">Events</a></li>
-                   
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
@@ -213,169 +241,175 @@
         <div class="container">
             <h2 class="section-title">AVIRBHAV 2024 Events</h2>
 
-            <!-- Technical Events -->
-            <div class="event-category">
-                <h3 class="event-category-title">Tech showdowns</h3>
-                <div class="events-list">
-                    <div class="event-item" data-aos="fade-up">
-                        <div class="event-header">
-                            <h3>Techncial Quiz</h3>
-                        </div>
-                        <div class="event-content">
-                            <p> Consists of 3 members per team. </p>
-                            <p> Team members can be of different branches and semesters.</p>
-                            <p> Tech awareness, Programming, history, Tech GK etc., will be the topics</p>
-                        </div>
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeHA0DF1PNsVO8Ii1BTpKTvkDngWO_ugUat_5Edt7c33g_yyA/viewform?usp=sf_link" class="register-button">Register</a>
-                    </div>
-                    <div class="event-item" data-aos="fade-up">
-                        <div class="event-header">
-                            <h3> Conquer the code: </h3>
-                        </div>
-                        <div class="event-content">
-                            <p> Code debugging challenge, Outcome is to get the expected output. </p>
-                        </div>
-                        <a href="https://forms.gle/iHPZ4cGU7SmdmgAb6" class="register-button">Register</a>
-                    </div>
-                    <div class="event-item" data-aos="fade-up">
-                        <div class="event-header">
-                            <h3>Idea Infusion:</h3>
-                        </div>
-                        <div class="event-content">
-                            <p> Present your idea on given topic. </p>
-                            <p>something that is business possible, feasible and innovative</p>
-                        </div>
-                        <a href="https://forms.gle/DEoQciFqjxC26F2F6" class="register-button">Register</a>
-                    </div>
-                    <div class="event-item" data-aos="fade-up">
-                        <div class="event-header">
-                            <h3>App Review</h3>
-                        </div>
-                        <div class="event-content">
-                            <p> An app will be given on the spot </p>
-                            <p> Five minutes will be give to study the app </p>
-                            <p>They have to raise points about the usage and features of the app.</p>
-                            <p> Compare it with existing one. Give suggestions to improve it </p>
-                        </div>
-                        <a href="https://forms.gle/9UVjBccdQJqM3kL87" class="register-button">Register</a>
-                    </div>
-                </div>
-            </div>
 
-            <!-- Cultural Events -->
-            <div class="event-category">
-                <h3 class="event-category-title">Chill Zone</h3>
-                <div class="events-list">
-                    <div class="event-item" data-aos="fade-up">
-                        <div class="event-header">
-                            <h3>Drawing/Sketching</h3>
-                        </div>
-                        <div class="event-content">
-                            <p> Draw or sketch based on the given theme or topic.</p>
-                        </div>
-                        <a href="https://forms.gle/kCDgcWiKbVno7eCE8" class="register-button">Register</a>
+           <!-- Technical Events -->
+           <div class="event-category">
+            <h3 class="event-category-title">Tech showdowns</h3>
+            <div class="events-list">
+                <div class="event-item" data-aos="fade-up">
+                    <div class="event-header">
+                        <h3>Techncial Quiz</h3>
                     </div>
-                    <div class="event-item" data-aos="fade-up">
-                        <div class="event-header">
-                            <h3>Act Out Loud</h3>
-                        </div>
-                        <div class="event-content">
-                            <p>Team Size: 3 members</p>
-                             <p>  A fun event where the process will be explained on the spot.</p>
-                        </div>
-                        <a href="https://forms.gle/PuyXsEPXX3Sm1bri8" class="register-button">Register</a>
+                    <div class="event-content">
+                        <p> Consists of 3 members per team. </p>
+                        <p> Team members can be of different branches and semesters.</p>
+                        <p> Tech awareness, Programming, history, Tech GK etc., will be the topics</p>
                     </div>
-                    <div class="event-item" data-aos="fade-up">
-                        <div class="event-header">
-                            <h3>Visual Tale Contest </h3>
-                        </div>
-                        <div class="event-content">
-                            <p>Submit photos or videos on any theme (nature, culture, technology, daily life, etc.).  </p>
-                            <p>Showcase creativity and unique perspectives.  </p>
-                             <p>No specific technical requirements—focus on storytelling through visuals.</p>
-                        </div>
-                        <a href="https://forms.gle/9CkdcuMZp8Qh2MSb6" class="register-button">Register</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeHA0DF1PNsVO8Ii1BTpKTvkDngWO_ugUat_5Edt7c33g_yyA/viewform?usp=sf_link" class="register-button">Register</a>
+                </div>
+                <div class="event-item" data-aos="fade-up">
+                    <div class="event-header">
+                        <h3> Conquer the code: </h3>
                     </div>
+                    <div class="event-content">
+                        <p> Code debugging challenge, Outcome is to get the expected output. </p>
+                    </div>
+                    <a href="https://forms.gle/iHPZ4cGU7SmdmgAb6" class="register-button">Register</a>
+                </div>
+                <div class="event-item" data-aos="fade-up">
+                    <div class="event-header">
+                        <h3>Idea Infusion:</h3>
+                    </div>
+                    <div class="event-content">
+                        <p> Present your idea on given topic. </p>
+                        <p>something that is business possible, feasible and innovative</p>
+                    </div>
+                    <a href="https://forms.gle/DEoQciFqjxC26F2F6" class="register-button">Register</a>
+                </div>
+                <div class="event-item" data-aos="fade-up">
+                    <div class="event-header">
+                        <h3>App Review</h3>
+                    </div>
+                    <div class="event-content">
+                        <p> An app will be given on the spot </p>
+                        <p> Five minutes will be give to study the app </p>
+                        <p>They have to raise points about the usage and features of the app.</p>
+                        <p> Compare it with existing one. Give suggestions to improve it </p>
+                    </div>
+                    <a href="https://forms.gle/9UVjBccdQJqM3kL87" class="register-button">Register</a>
                 </div>
             </div>
+        </div>
 
-            <!-- Fun Events -->
-            <div class="event-category">
-                <h3 class="event-category-title">Games</h3>
-                <div class="events-list">
-                    <div class="event-item" data-aos="fade-up">
-                        <div class="event-header">
-                            <h3>Pubg</h3>
-                        </div>
-                        <div class="event-content">
-                            <p>Test your knowledge and win exciting prizes in our trivia quiz.</p>
-                        </div>
-                        <a href="https://forms.gle/ZLtPWyZQqiCYZb2J6" class="register-button">Register</a>
+        <!-- Cultural Events -->
+        <div class="event-category">
+            <h3 class="event-category-title">Chill Zone</h3>
+            <div class="events-list">
+                <div class="event-item" data-aos="fade-up">
+                    <div class="event-header">
+                        <h3>Drawing/Sketching</h3>
                     </div>
-                    <div class="event-item" data-aos="fade-up">
-                        <div class="event-header">
-                            <h3>free Fire</h3>
-                        </div>
-                        <div class="event-content">
-                            <p>Showcase your fashion sense and creativity on the runway.</p>
-                        </div>
-                        <a href="https://forms.gle/Zyi6xCQ7ZTR5fVKG6" class="register-button">Register</a>
+                    <div class="event-content">
+                        <p> Draw or sketch based on the given theme or topic.</p>
                     </div>
-                    <div class="event-item" data-aos="fade-up">
-                        <div class="event-header">
-                            <h3>Sudoko</h3>
-                        </div>
-                        <div class="event-content">
-                            <p>Enjoy a variety of delicious foods from different cuisines.</p>
-                        </div>
-                        <a href="https://forms.gle/pTX7VajkRaf3CcTQ6" class="register-button">Register</a>
+                    <a href="https://forms.gle/kCDgcWiKbVno7eCE8" class="register-button">Register</a>
+                </div>
+                <div class="event-item" data-aos="fade-up">
+                    <div class="event-header">
+                        <h3>Act Out Loud</h3>
                     </div>
-                    <div class="event-item" data-aos="fade-up">
-                        <div class="event-header">
-                            <h3>Housie</h3>
-                        </div>
-                        <div class="event-content">
-                            <p>Enjoy a variety of delicious foods from different cuisines.</p>
-                        </div>
-                        <a href="https://forms.gle/RLRZvy6Wgb4zMRFK7" class="register-button">Register</a>
+                    <div class="event-content">
+                        <p>Team Size: 3 members</p>
+                         <p>  A fun event where the process will be explained on the spot.</p>
                     </div>
-                    <div class="event-item" data-aos="fade-up">
-                        <div class="event-header">
-                            <h3>Ludo</h3>
-                        </div>
-                        <div class="event-content">
-                            <p>Enjoy a variety of delicious foods from different cuisines.</p>
-                        </div>
-                        <a href="https://forms.gle/kf2budz4PnWUoxBQ6" class="register-button">Register</a>
+                    <a href="https://forms.gle/PuyXsEPXX3Sm1bri8" class="register-button">Register</a>
+                </div>
+                <div class="event-item" data-aos="fade-up">
+                    <div class="event-header">
+                        <h3>Visual Tale Contest </h3>
                     </div>
-                    <div class="event-item" data-aos="fade-up">
-                        <div class="event-header">
-                            <h3>Chess</h3>
-                        </div>
-                        <div class="event-content">
-                            <p>Enjoy a variety of delicious foods from different cuisines.</p>
-                        </div>
-                        <a href="https://forms.gle/8fJ1rvBpaobcFPcW9" class="register-button">Register</a>
+                    <div class="event-content">
+                        <p>Submit photos or videos on any theme (nature, culture, technology, daily life, etc.).  </p>
+                        <p>Showcase creativity and unique perspectives.  </p>
+                         <p>No specific technical requirements—focus on storytelling through visuals.</p>
                     </div>
+                    <a href="https://forms.gle/9CkdcuMZp8Qh2MSb6" class="register-button">Register</a>
                 </div>
             </div>
+        </div>
+
+        <!-- Fun Events -->
+        <div class="event-category">
+            <h3 class="event-category-title">Games</h3>
+            <div class="events-list">
+                <div class="event-item" data-aos="fade-up">
+                    <div class="event-header">
+                        <h3>Pubg</h3>
+                    </div>
+                    <div class="event-content">
+                        <p>Test your knowledge and win exciting prizes in our trivia quiz.</p>
+                    </div>
+                    <a href="https://forms.gle/ZLtPWyZQqiCYZb2J6" class="register-button">Register</a>
+                </div>
+                <div class="event-item" data-aos="fade-up">
+                    <div class="event-header">
+                        <h3>free Fire</h3>
+                    </div>
+                    <div class="event-content">
+                        <p>Showcase your fashion sense and creativity on the runway.</p>
+                    </div>
+                    <a href="https://forms.gle/Zyi6xCQ7ZTR5fVKG6" class="register-button">Register</a>
+                </div>
+                <div class="event-item" data-aos="fade-up">
+                    <div class="event-header">
+                        <h3>Sudoko</h3>
+                    </div>
+                    <div class="event-content">
+                        <p>Enjoy a variety of delicious foods from different cuisines.</p>
+                    </div>
+                    <a href="https://forms.gle/pTX7VajkRaf3CcTQ6" class="register-button">Register</a>
+                </div>
+                <div class="event-item" data-aos="fade-up">
+                    <div class="event-header">
+                        <h3>Housie</h3>
+                    </div>
+                    <div class="event-content">
+                        <p>Enjoy a variety of delicious foods from different cuisines.</p>
+                    </div>
+                    <a href="https://forms.gle/RLRZvy6Wgb4zMRFK7" class="register-button">Register</a>
+                </div>
+                <div class="event-item" data-aos="fade-up">
+                    <div class="event-header">
+                        <h3>Ludo</h3>
+                    </div>
+                    <div class="event-content">
+                        <p>Enjoy a variety of delicious foods from different cuisines.</p>
+                    </div>
+                    <a href="https://forms.gle/kf2budz4PnWUoxBQ6" class="register-button">Register</a>
+                </div>
+                <div class="event-item" data-aos="fade-up">
+                    <div class="event-header">
+                        <h3>Chess</h3>
+                    </div>
+                    <div class="event-content">
+                        <p>Enjoy a variety of delicious foods from different cuisines.</p>
+                    </div>
+                    <a href="https://forms.gle/8fJ1rvBpaobcFPcW9" class="register-button">Register</a>
+                </div>
+            </div>
+        </div>
+
+            <!-- Additional categories go here -->
         </div>
     </section>
 
-    <!-- Footer -->
+    <!-- Footer Section -->
     <footer class="footer">
-        <div class="container">
-            <div class="social-media">
-                
-            </div>
-            <p>&copy; @2024 AVIRBHAV|All rights reserved.</p>
-        </div>
+        <p>&copy; 2024 AVIRBHAV. All Rights Reserved.</p>
+        <ul class="social-media">
+            <li><a href="#" class="fab fa-facebook-f"></a></li>
+            <li><a href="#" class="fab fa-twitter"></a></li>
+            <li><a href="#" class="fab fa-instagram"></a></li>
+            <li><a href="#" class="fab fa-linkedin-in"></a></li>
+        </ul>
     </footer>
 
     <!-- AOS (Animate on Scroll) JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>
-        AOS.init();
+        AOS.init({
+            duration: 1200,
+        });
     </script>
 </body>
 </html>
