--- a/events.html
+++ b/events.html
@@ -395,7 +395,7 @@
 
     <!-- Footer Section -->
     <footer class="footer">
-        <p>&copy; 2024 AVIRBHAV. All Rights Reserved.</p>
+        <p>&copy; @ Avirbhav-2k24 | All Rights Reserved.</p>
         <ul class="social-media">
             <li><a href="#" class="fab fa-facebook-f"></a></li>
             <li><a href="#" class="fab fa-twitter"></a></li>
