--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p id="aiml-dept-text">@ 2024 AIML Dept | All Rights Reserved
+            <p id="aiml-dept-text">@ Avirbhav-2k24 | All Rights Reserved
             </p> <!-- AIML Dept Text with glow effect -->
 
         </div>
