--- a/contact.html
+++ b/contact.html
@@ -148,7 +148,7 @@
         </header>
 
         <div class="footer">
-            © 2024 Avirbhav Fest | All rights reserved.
+            © Avirbhav-2k24 | All rights reserved.
         </div>
     </div>
 
