--- a/events.html
+++ b/events.html
@@ -264,7 +264,7 @@
                     <div class="event-content">
                         <p> Code debugging challenge, Outcome is to get the expected output. </p>
                     </div>
-                    <a href="https://forms.gle/iHPZ4cGU7SmdmgAb6" class="register-button">Register</a>
+                    <a href="https://forms.gle/Uj3N8MNAe92D5CUu8" class="register-button">Register</a>
                 </div>
                 <div class="event-item" data-aos="fade-up">
                     <div class="event-header">
@@ -274,7 +274,7 @@
                         <p> Present your idea on given topic. </p>
                         <p>something that is business possible, feasible and innovative</p>
                     </div>
-                    <a href="https://forms.gle/DEoQciFqjxC26F2F6" class="register-button">Register</a>
+                    <a href="https://forms.gle/FKxL74tdzCdGwgwd8" class="register-button">Register</a>
                 </div>
                 <div class="event-item" data-aos="fade-up">
                     <div class="event-header">
@@ -286,7 +286,16 @@
                         <p>They have to raise points about the usage and features of the app.</p>
                         <p> Compare it with existing one. Give suggestions to improve it </p>
                     </div>
-                    <a href="https://forms.gle/9UVjBccdQJqM3kL87" class="register-button">Register</a>
+                    <a href="https://forms.gle/ofJdRgogagVJBxs48" class="register-button">Register</a>
+                </div>
+                <div class="event-item" data-aos="fade-up">
+                    <div class="event-header">
+                        <h3>Motor Co-ordination</h3>
+                    </div>
+                    <div class="event-content">
+                        
+                    </div>
+                    <a href="https://forms.gle/zUH2yjiJQ7He6t1p6" class="register-button">Register</a>
                 </div>
             </div>
         </div>
