--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="home" class="hero-section" data-aos="fade-in">
         <div class="hero-video-container">
             <video autoplay muted loop id="background-video">
-                <source src="videos/background-video.mp4" type="video/mp4">
+                <source src="video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="video-overlay"></div>
@@ -47,28 +47,12 @@
         </div>
     </section>
 
-  
     <section id="about" class="about-section" data-aos="fade-up">
         <div class="container">
             <h2>About Avirbhav</h2>
             <p>
-                Avirbhav is our annual fest celebrating innovation, creativity, and talent. With a mix of technical, 
-                non-technical, and gaming events, it offers something for everyone:
+                Avirbhav is our annual fest packed with fun, creativity, and excitement! Whether you love tech, art, or games, there’s something for everyone. Show off your skills in our <strong>Technical Events</strong> with coding challenges, hackathons, and tech quizzes. For those who enjoy the arts, our <strong>Non-Technical Events</strong> feature cultural performances, debates, and creative competitions that let you shine. And if you’re here for the thrill, dive into our Games and Fun section with <strong>e-sports</strong>, traditional games, and activities that bring everyone together for a good time. Join us at Avirbhav for a day full of learning, competition, and endless fun—you won’t want to miss it!
             </p>
-            <div style="margin-top: 20px;">
-                <h3>Technical Events</h3>
-                <p>Engage in coding challenges, hackathons, and tech quizzes to test and showcase your skills.</p>
-            </div>
-            <div style="margin-top: 20px;">
-                <h3>Non-Technical Events</h3>
-                <p>Explore your artistic side with cultural performances, debates, and creative competitions.</p>
-            </div>
-            <div style="margin-top: 20px;">
-                <h3>Games and Fun</h3>
-                <p>Enjoy e-sports, traditional games, and fun activities that bring excitement and camaraderie.</p>
-            </div>
-            <p style="margin-top: 20px;">Join us at Avirbhav for an unforgettable experience of learning, competition, and fun!</p>
-            
         </div>
     </section>
 
@@ -83,7 +67,7 @@
                     <p><i class="fas fa-phone"></i> +91 7989662002</p>
                 </div>
                 <div class="team-member">
-                    <img src="images/co-convenor.jpg" alt="Co-Convenor">
+                    <img src="cocovenor.jpg" alt="Co-Convenor">
                     <h3>SUDHAKAR</h3>
                     <p>Co-Convenor</p>
                     <p><i class="fas fa-phone"></i> +91 9705412233</p>
@@ -94,9 +78,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p id="aiml-dept-text">@ Avirbhav-2k24 | All Rights Reserved
-            </p> <!-- AIML Dept Text with glow effect -->
-
+            <p id="aiml-dept-text">@ 2024 AIML Dept | All Rights Reserved</p>
         </div>
     </footer>
 
