--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="team-member">
                     <img src="cocovenor.jpg" alt="Co-Convenor">
-                    <h3>SUDHAKAR</h3>
+                    <h3>DR.G.SUDHAKAR</h3>
                     <p>Co-Convenor</p>
                     <p><i class="fas fa-phone"></i> +91 9705412233</p>
                 </div>
