--- a/events.html
+++ b/events.html
@@ -303,7 +303,7 @@
                     <div class="event-content">
                         <p> Draw or sketch based on the given theme or topic.</p>
                     </div>
-                    <a href="https://forms.gle/kCDgcWiKbVno7eCE8" class="register-button">Register</a>
+                    <a href="https://forms.gle/gBAKHnStuddSifncA" class="register-button">Register</a>
                 </div>
                 <div class="event-item" data-aos="fade-up">
                     <div class="event-header">
@@ -324,7 +324,7 @@
                         <p>Showcase creativity and unique perspectives.  </p>
                          <p>No specific technical requirements—focus on storytelling through visuals.</p>
                     </div>
-                    <a href="https://forms.gle/9CkdcuMZp8Qh2MSb6" class="register-button">Register</a>
+                    <a href="https://forms.gle/UuTgqF84wWA1QfBu8" class="register-button">Register</a>
                 </div>
                  <div class="event-item" data-aos="fade-up">
                     <div class="event-header">
