--- a/contact.html
+++ b/contact.html
@@ -209,7 +209,7 @@
 
         <!-- Sub-category 4 -->
         <div class="sub-category" onclick="toggleList('list4')">
-            <h2>CULTURAL CO-ORDINATERS</h2>
+            <h2>CULTURALS</h2>
             <div id="list4" class="coordinator-list">
                 <p>Coordinator 1: K.BHANU TEJA <br><span>Phone: +91 9502647676</span></p>
                 <p>Coordinator 2: V.S.C.YESAWINI<br><span>Phone: +91 7989193698</span></p>
