--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@
         <div class="sub-category" onclick="toggleList('list1')">
             <h2>Tech Showdowns</h2>
             <div id="list1" class="coordinator-list">
-                <p>Coordinator 1: V.P.PRANEETH <br><span>Phone:+91 8328571819</span></p>
+                <p>Coordinator 1: PRANEETH VASA <br><span>Phone:+91 8328571819</span></p>
                 <p>Coordinator 2: K.NEERAJA <br><span>Phone: +91 8106990656</span></p>
                 <p>Coordinator 3: M.JYOTHI<br><span>Phone: +91 9381131378</span></p>
                 <p>Coordinator 4: LIKITH <br><span>Phone: +91 7893789031</span></p>
