--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <div class="scrolling-banner">
-        <p>Avirbhav-2k24 Dates: September 12-13, 2024</p>
+    <p>Welcome to Avirbhav-2k24! Our fest dates are September 12-13, 2024. <a href="brochure.jpg" download>Click here to download our brochure</a></p>
     </div>
 
     <section id="home" class="hero-section" data-aos="fade-in">
