--- a/contact.html
+++ b/contact.html
@@ -162,19 +162,19 @@
     </header>
 
     <!-- Main Heading -->
-    <h1>Event Coordinators</h1>
+    <h1>Student Coordinators</h1>
 
     <!-- Main Coordinator Section -->
     <div class="container coordinator-section">
         <!-- Main Coordinator -->
         <div class="sub-category" onclick="toggleList('main-coordinator-list')">
-            <h2>Main Coordinators</h2>
+            <h2>Event Organizers</h2>
             <div id="main-coordinator-list" class="coordinator-list">
-                <p>Main Coordinator 1: U.N.V.RAVI TEJA <br><span>Phone: +91 7013666788</span></p>
-                <p>Main Coordinator 2: G.KARTHIK BHASKAR <br><span>Phone: +91 8099963336</span></p>
-                <p>Main Coordinator 3: L.MEGHA SYAM <br><span>Phone: +91 9573304843</span></p>
-                <p>Main Coordinator 4: KUMAR RUDRA <br><span>Phone: +91 9063360596</span></p>
-                <p>Main Coordinator 5: KOUSHIK <br><span>Phone: +91 XXXXXXXXXX</span></p>
+                <p> U.N.V.RAVI TEJA <br><span>Phone: +91 7013666788</span></p>
+                <p> G.KARTHIK BHASKAR <br><span>Phone: +91 8099963336</span></p>
+                <p>L.MEGHA SYAM <br><span>Phone: +91 9573304843</span></p>
+                <p>KUMAR RUDRA <br><span>Phone: +91 9063360596</span></p>
+                <p> KOUSHIK <br><span>Phone: +91 XXXXXXXXXX</span></p>
             </div>
         </div>
     </div>
@@ -185,10 +185,10 @@
         <div class="sub-category" onclick="toggleList('list1')">
             <h2>Tech Showdowns</h2>
             <div id="list1" class="coordinator-list">
-                <p>Coordinator 1: V.P.PRANEETH <br><span>Phone:+91 8328571819</span></p>
-                <p>Coordinator 2: K.NEERAJA <br><span>Phone: +91 8106990656</span></p>
-                <p>Coordinator 3: M.JYOTHI<br><span>Phone: +91 9381131378</span></p>
-                <p>Coordinator 4: LIKITH <br><span>Phone: +91 7893789031</span></p>
+                <p> V.P.PRANEETH <br><span>Phone:+91 8328571819</span></p>
+                <p> K.NEERAJA <br><span>Phone: +91 8106990656</span></p>
+                <p> M.JYOTHI<br><span>Phone: +91 9381131378</span></p>
+                <p> LIKITH <br><span>Phone: +91 7893789031</span></p>
             </div>
         </div>
 
@@ -196,11 +196,11 @@
         <div class="sub-category" onclick="toggleList('list2')">
             <h2>Chill Zone</h2>
             <div id="list2" class="coordinator-list">
-                <p>Coordinator 1: DURGA PRASAD <br><span>Phone: +91 9553950479</span></p>
-                <p>Coordinator 2: P.VINAY <br><span>Phone: +91 9642324495</span></p>
-                <p>Coordinator 3: B.CHANDRIKA <br><span>Phone: +91 7680966610</span></p>
-                <p>Coordinator 4: RAKESH <br><span>Phone: +123 456 7890</span></p>
-                <p>Coordinator 5: K.JHANAVI <br><span>Phone: +91 9347981850</span></p>
+                <p> DURGA PRASAD <br><span>Phone: +91 9553950479</span></p>
+                <p> P.VINAY <br><span>Phone: +91 9642324495</span></p>
+                <p> B.CHANDRIKA <br><span>Phone: +91 7680966610</span></p>
+                <p> RAKESH <br><span>Phone: +123 456 7890</span></p>
+                <p> K.JHANAVI <br><span>Phone: +91 9347981850</span></p>
             </div>
         </div>
 
@@ -208,12 +208,12 @@
         <div class="sub-category" onclick="toggleList('list3')">
             <h2>Game Zone</h2>
             <div id="list3" class="coordinator-list">
-                <p>Coordinator 1: E.JEJI ANIL  <br><span>Phone: +91 9642324495</span></p>
-                <p>Coordinator 2: K.VAMSI <br><span>Phone: +91 9849277879</span></p>
-                <p>Coordinator 3: B.VIJAYA<br><span>Phone: +91 7036348948</span></p>
-                <p>Coordinator 4: PRASAD <br><span>Phone: +91 7981017915</span></p>
-                <p>Coordinator 5: MALLI KARJUN <br><span>Phone: +91 9666453219</span></p>
-                <p>Coordinator 6: K.C.V.GOPI KRISHNA <br><span>Phone: +91 9392796088</span></p>
+                <p> E.JEJI ANIL  <br><span>Phone: +91 9642324495</span></p>
+                <p> K.VAMSI <br><span>Phone: +91 9849277879</span></p>
+                <p> B.VIJAYA<br><span>Phone: +91 7036348948</span></p>
+                <p> PRASAD <br><span>Phone: +91 7981017915</span></p>
+                <p> MALLI KARJUN <br><span>Phone: +91 9666453219</span></p>
+                <p> K.C.V.GOPI KRISHNA <br><span>Phone: +91 9392796088</span></p>
             </div>
         </div>
 
@@ -221,11 +221,11 @@
         <div class="sub-category" onclick="toggleList('list4')">
             <h2>Cultural Coordinators</h2>
             <div id="list4" class="coordinator-list">
-                <p>Coordinator 1: K.BHANU TEJA <br><span>Phone: +91 9502647676</span></p>
-                <p>Coordinator 2: V.S.C.YESAWINI<br><span>Phone: +91 7989193698</span></p>
-                <p>Coordinator 3: M.S.R.CHANDRIKA <br><span>Phone: +91 9642416755</span></p>
-                <p>Coordinator 4: A.HEMANTH <br><span>Phone: +91 9032837064</span></p>
-                <p>Coordinator 5: K.SWARNA<br><span>Phone: +91 7207448350</span></p>
+                <p> K.BHANU TEJA <br><span>Phone: +91 9502647676</span></p>
+                <p> V.S.C.YESAWINI<br><span>Phone: +91 7989193698</span></p>
+                <p> M.S.R.CHANDRIKA <br><span>Phone: +91 9642416755</span></p>
+                <p> A.HEMANTH <br><span>Phone: +91 9032837064</span></p>
+                <p> K.SWARNA<br><span>Phone: +91 7207448350</span></p>
             </div>
         </div>
     </div>
